--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <maven-compiler-plugin.source>1.8</maven-compiler-plugin.source>
     <exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
+    <junit.version>4.12</junit.version>
+    <hsqldb.version>2.4.0</hsqldb.version>
   </properties>
 
   <dependencies>
@@ -43,6 +45,20 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>6.0.6</version>
+    </dependency>
+
+    <!--Testing Dependencies-->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>${hsqldb.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
