--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
       <version>${hsqldb.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.konghq</groupId>
+      <artifactId>unirest-java</artifactId>
+      <version>2.3.17</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
